@@ -29,8 +29,8 @@ XSERVER :50 ACCEPT-CONNECT
 SESSION CONNECT-XSERVER
 
 # Show the greeter
-*SHOW-GREETER
-RUNNER SHOW-GREETER
+*SWITCH-TO-GREETER
+RUNNER SWITCH-TO-GREETER
 
 # New X server starts
 XSERVER :51 START
