@@ -1,2 +1,0 @@
-#!/bin/sh
-./src/test-runner show-greeter
