@@ -3,6 +3,8 @@ Overview of changes in lightdm 0.4.5
     * Fix invalid XAUTHORITY variable being set for second X server.
     * Fix bug where switching users created X servers without VTs
     * Release a VT when the X server on it stops
+    * D-Bus API changes:
+      - Rename ShowGreeter() to SwitchToGreeter()
 
 Overview of changes in lightdm 0.4.4
 
